fixed central alignment of app content

--- a/src/app/question-card/question-card.scss
+++ b/src/app/question-card/question-card.scss
@@ -1,8 +1,7 @@
 .question-card{
-    margin: 20px;
     border: 1px solid var(--dark-grey);
     border-radius: 5px;
-    width: 500px;
+    width: 50vw;
     padding: 30px;
 
     .progress-banner{
