--- a/src/app/settings/settings.scss
+++ b/src/app/settings/settings.scss
@@ -1,8 +1,7 @@
 .settings{
-    margin: 20px;
     border: 1px solid var(--dark-grey);
     border-radius: 5px;
-    width: 500px;
+    width: 50vw;
     padding: 30px;
     display: flex;
     flex-direction: column;
